tests/golden/test_golden_state_machine.bmb
// Golden test: State machine simulation via integer dispatch
// Tests complex control flow through function-based state transitions

// States: 0=START, 1=READING, 2=COMMENT, 3=STRING, 4=DONE, 5=ERROR

fn transition(state: i64, input: i64) -> i64 = {
// input: 0=letter, 1=digit, 2=slash, 3=quote, 4=space, 5=eof
    if state == 0 {

// START
    if input == 0 { 1 }       // letter -> READING
    else if input == 2 { 2 }  // slash -> COMMENT
    else if input == 3 { 3 }  // quote -> STRING
    else if input == 5 { 4 }  // eof -> DONE
    else if input == 4 { 0 }  // space -> stay START
    else { 5 }                // error
    }
    else if state == 1 {

// READING
    if input == 0 { 1 }       // letter -> stay READING
    else if input == 1 { 1 }  // digit -> stay READING
    else if input == 4 { 0 }  // space -> START
    else if input == 5 { 4 }  // eof -> DONE
    else { 5 }                // error
    }
    else if state == 2 {

// COMMENT
    if input == 5 { 4 }       // eof -> DONE
    else { 2 }                // everything stays in COMMENT
    }
    else if state == 3 {

// STRING
    if input == 3 { 0 }       // closing quote -> START
    else if input == 5 { 5 }  // eof in string -> ERROR
    else { 3 }                // stay in STRING
    }
    else { state }  // DONE or ERROR stays
    };

// Run the state machine on a vec of input symbols
fn run_sm_arr(inputs: i64, pos: i64, state: i64) -> i64 =
    if pos >= vec_len(inputs) { state }
    else {
        let new_state = transition(state, vec_get(inputs, pos));
        run_sm_arr(inputs, pos + 1, new_state)
    };

    // Count how many transitions land in target state

fn count_visits(inputs: i64, pos: i64, state: i64, target: i64, count: i64) -> i64 =
    if pos >= vec_len(inputs) { count }
    else {
        let new_state = transition(state, vec_get(inputs, pos));
        let new_count = if new_state == target { count + 1 } else { count };
        count_visits(inputs, pos + 1, new_state, target, new_count)
    };

    // Simple counter-based state machine
    // Counts up to a threshold, then counts down, repeats

fn counter_sm(value: i64, direction: i64, steps: i64, thresh: i64) -> i64 =
    if steps <= 0 { value }
    else {
        let new_val = if direction == 0 { value + 1 } else { value - 1 };
        let new_dir = if direction == 0 and new_val >= thresh { 1 }
        else if direction == 1 and new_val <= 0 { 0 }
        else { direction };
        counter_sm(new_val, new_dir, steps - 1, thresh)
    };

    // Traffic light: 0=red, 1=green, 2=yellow, cycles through

fn traffic_step(state: i64, timer: i64) -> i64 =
    if timer <= 0 {
        if state == 0 { 1 }      // red -> green
        else if state == 1 { 2 } // green -> yellow
        else { 0 }               // yellow -> red
    }
    else { state };

fn run_traffic(state: i64, timer: i64, steps: i64, acc: i64) -> i64 =
    if steps <= 0 { acc }
    else {
        let new_state = traffic_step(state, timer);
        let new_timer = if new_state != state { 3 } else { timer - 1 };
        run_traffic(new_state, new_timer, steps - 1, acc * 10 + new_state)
    };

fn make_vec4(a: i64, b: i64, c: i64, d: i64) -> i64 = {
    let v = vec_new();
    let _p1 = vec_push(v, a);
    let _p2 = vec_push(v, b);
    let _p3 = vec_push(v, c);
    let _p4 = vec_push(v, d);
    v
    };

fn make_vec5(a: i64, b: i64, c: i64, d: i64, e: i64) -> i64 = {
    let v = vec_new();
    let _p1 = vec_push(v, a);
    let _p2 = vec_push(v, b);
    let _p3 = vec_push(v, c);
    let _p4 = vec_push(v, d);
    let _p5 = vec_push(v, e);
    v
    };

fn make_vec2(a: i64, b: i64) -> i64 = {
    let v = vec_new();
    let _p1 = vec_push(v, a);
    let _p2 = vec_push(v, b);
    v
    };

fn main() -> i64 = {
// Basic transitions
    let _p1 = println(transition(0, 0));  // START + letter = 1 (READING)
    let _p2 = println(transition(0, 2));  // START + slash = 2 (COMMENT)
    let _p3 = println(transition(0, 3));  // START + quote = 3 (STRING)
    let _p4 = println(transition(0, 5));  // START + eof = 4 (DONE)
    let _p5 = println(transition(1, 4));  // READING + space = 0 (START)
    let _p6 = println(transition(3, 3));  // STRING + quote = 0 (START)
    let _p7 = println(transition(3, 5));  // STRING + eof = 5 (ERROR)

// Run state machine on input vecs
// letter, letter, letter, eof -> READING READING READING DONE = 4
    let v1 = make_vec4(0, 0, 0, 5);
    let _p8 = println(run_sm_arr(v1, 0, 0));

// slash, letter, letter, eof -> COMMENT COMMENT COMMENT DONE = 4
    let v2 = make_vec4(2, 0, 0, 5);
    let _p9 = println(run_sm_arr(v2, 0, 0));

// quote, letter, letter, quote, eof -> STRING STRING STRING START DONE = 4
    let v3 = make_vec5(3, 0, 0, 3, 5);
    let _p10 = println(run_sm_arr(v3, 0, 0));

// letter, space, letter, eof -> READING START READING DONE = 4
    let v4 = make_vec4(0, 4, 0, 5);
    let _p11 = println(run_sm_arr(v4, 0, 0));

// quote, letter (no close) -> STRING STRING = 3
    let v5 = make_vec2(3, 0);
    let _p12 = println(run_sm_arr(v5, 0, 0));

// Count visits to READING state (1)
// [letter, letter, letter, eof] -> visits READING 3 times
    let v6 = make_vec4(0, 0, 0, 5);
    let _p13 = println(count_visits(v6, 0, 0, 1, 0));

// Count visits to START state (0): [letter, space, letter, space, eof]
    let v7 = make_vec5(0, 4, 0, 4, 5);
    let _p14 = println(count_visits(v7, 0, 0, 0, 0));

// Counter state machine
    let _p15 = println(counter_sm(0, 0, 5, 10));   // just counts up: 5
    let _p16 = println(counter_sm(0, 0, 15, 5));   // oscillates
    let _p17 = println(counter_sm(0, 0, 20, 3));   // more oscillations

// Traffic light
    let _p18 = println(run_traffic(0, 0, 1, 0));   // red(timer=0) -> green, acc = 1
    let _p19 = println(run_traffic(0, 0, 4, 0));   // trace the light changes

    let _f1 = vec_free(v1);
    let _f2 = vec_free(v2);
    let _f3 = vec_free(v3);
    let _f4 = vec_free(v4);
    let _f5 = vec_free(v5);
    let _f6 = vec_free(v6);
    let _f7 = vec_free(v7);
    0
    };
